--- a/core/asset/css/style.less
+++ b/core/asset/css/style.less
@@ -228,6 +228,7 @@
 		.wpeo-project-task {
 			page-break-inside: avoid;
 			-webkit-column-break-inside: avoid;
+			overflow: hidden;
 			width: 100%;
 			padding: 10px;
 
